# apcore-python

./: .code-forge.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/modules/: decorated_add.py  get_user.py  greet.py  send_email.py
planning/: overview.md
src/apcore/: __init__.py  acl.py  bindings.py  config.py  context.py  decorator.py  errors.py  executor.py  module.py
src/apcore/middleware/: __init__.py  (+4 more)
tests/: binding_helpers.py  conftest.py  test_acl.py  test_bindings.py  test_decorator.py  test_executor.py  test_executor_async.py  test_executor_stream.py  test_executor_types.py  test_integration_executor.py  test_logging_middleware.py  test_middleware.py  test_middleware_manager.py  test_public_api.py  test_redaction.py
tests/examples/: test_example_modules.py
tests/integration/: conftest.py  test_acl_enforcement.py  test_async_flows.py  test_binding_modules.py  test_decorator_modules.py  test_e2e_flow.py  test_error_propagation.py  test_infra_smoke.py  test_middleware_chain.py
tests/observability/: test_context_logger.py  test_metrics.py  test_observability_package.py  test_tracing.py
tests/registry/: conftest.py  test_circular_dependency_error.py  test_dependencies.py  test_entry_point.py  test_integration.py  test_metadata.py  test_registry.py  test_scanner.py  test_types.py  test_validation.py
tests/schema/: conftest.py  test_annotations.py  test_edge_cases.py  test_exporter.py  test_loader.py  test_ref_resolver.py  test_strict.py  test_types.py  test_validator.py
(+34 files in other folders)
